# GEMDiff

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
GEMDiff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
analysis/metrics/: sanity_metrics.json  week5_batch_strategy.md
configs/: config.yaml  mrna_128.yaml  mrna_16.yaml  mrna_256.yaml  mrna_32.yaml  mrna_64.yaml  mrna_8.yaml  mrna_emt.yaml  quick.yaml  quick_ckpt.yaml
configs/emt/: mrna_emt.yaml
configs/pancreatic/: mrna_512.yaml  quick.yaml
configs/random/: mrna_128.yaml  mrna_16.yaml  mrna_256.yaml  mrna_32.yaml  mrna_64.yaml  (+1 more)
data/: example_test.txt  example_test_labels.txt  example_train.txt  example_train_labels.txt
diffusion/: datasets.py  diffusion_util.py  dist_util.py  gaussian_diffusion.py  logger.py  mlp.py  nn.py  resample.py  respace.py  script_util.py  train_util.py
experiments/: cleanupdir.sh  collecthmgene.sh  ddpm_emt.sh  ddpm_gene.sh  ddpm_geneselect.sh  ddpm_perb.sh  ddpm_plot.sh  ddpm_ran.sh  ddpm_sample.sh  ddpm_ss.sh  ddpm_ss_balance.sh  ddpm_ss_hm.sh  ddpm_ssgeneset.sh  ddpm_ssgeneset_balance.sh  ddpm_train.sh  experiment.sh  experiment_gene.sh  experiment_generandom.sh  experiment_perturb.sh  experiment_plot.sh  experiment_sample.sh  experiment_train.sh  extract_all.sh  extract_pertub.sh  gather_gene.sh  silhouette_score.sh  verifymodel.sh
scripts/: baseline_benchmarks.py  evaluate_embeddings.py  gene.py  gene_selection.py  perturb.py  plot.py  preprocess_filter_labels.py  preprocess_tcga_paad.py  qc_pipeline.py  sample.py  train.py
(+5 files in other folders)
